<resources>
    <string name="app_name">Calculadora de Riscos Capilares</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="editT_email">Email</string>
    <string name="editT_senha">Senha</string>
    <string name="btn_logar">Logar</string>
    <string name="textV_Rec_Senha">Recuperar Senha</string>
    <string name="textV_cadastrar">Cadastrar</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="Btn_salvar">Salvar</string>
    <string name="hint_Nome">Nome</string>
    <string name="hint_Senha">Senha</string>
    <string name="hint_Email">Email</string>
    <string name="hint_confirmar_senha">Confirmar Senha</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_salvar">Salvar</string>
    <string name="Tools_share">Share</string>
    <string name="Comuni_send">Send</string>
    <string name="slid_slideshow">Slideshow</string>
    <string name="galeria_gallery">Gallery</string>
    <string name="fotos_import">Import</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textV_feminino">Feminino</string>
    <string name="textV_masculino">Masculino</string>
    <string name="textV_sexo">Sexo</string>
    <string name="textV_sim">Sim</string>
    <string name="textV_Procedimentos">Procedimentos</string>
    <string name="textV_Gestante">É gestante?</string>
    <string name="www_texV_softwaresa_com_br">www.softwaresa.com.br</string>
    <string name="todo">TODO</string>
    <string name="rb_nao">Não</string>
    <string name="texV_tipo_de_cabelo_natural">Tipo de cabelo natural?</string>
    <string name="text_sexo">Sexo</string>
</resources>
